--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,17 @@ SLACK_APP_TOKEN=xapp-your-token
 REDIS_HOST=localhost
 
 CLAUDE_CODE_OAUTH_TOKEN=your-oauth-token
+OPENAI_API_KEY=your-openai-api-key
 
 GH_TOKEN=github_pat_your-token
 GH_OWNER=your-org-or-username
+
+SENTRY_AUTH_TOKEN=your-sentry-auth-token
+# SENTRY_BASE_URL=https://sentry.io/api/0/
+
+JIRA_BASE_URL=https://your-org.atlassian.net
+JIRA_EMAIL=your-email@example.com
+JIRA_API_TOKEN=your-jira-api-token
+
+# Optional — omit to use FakeRunManager (local dev, no microservice needed)
+WEB_RUN_MANAGER_URL=http://localhost:8000
